syntax = "proto3";


import "google/api/annotations.proto";
option go_package = "/gen/go";


service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
          get: "/v1/messages/{name}"
          additional_bindings: {get: "/v1/messages/legacy/{name=**}"}
        };
      }

    
}
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
  }
  
// The response message containing the greetings
message HelloResponse {
    string message = 1;
}
